# ROS2_mu_xen

./: README.md
communication/: CMakeLists.txt
communication/msg/: MclActuator.msg  MclImu.msg  MclTouch.msg  MotionCommands.msg
communication/srv/: GaitSwitch.srv  ModeSet.srv
core/: CMakeLists.txt  package.xml
ctrl_funcs/: CMakeLists.txt  README.md  package.xml
ctrl_funcs/include/: controller.hpp  filter.hpp  kinodynamics.hpp  leg_model.hpp  logging.hpp  msg_handler.hpp  trajectory.hpp
ctrl_funcs/param/: ctrl_param_config.yaml
ctrl_funcs/src/: controller.cpp  filter.cpp  kinodynamics.cpp  main.cpp  msg_handler.cpp  trajectory.cpp
description/: package.xml
description/model/: quadrupedMCL.xml
simulation/mujoco/: CMakeLists.txt
simulation/mujoco/include/: MuJoCoMessageHandler.h  simulate.h
simulation/mujoco/launch/: simulation_launch.py
simulation/mujoco/src/: MuJoCoMessageHandler.cpp  main.cc
src/install/: local_setup.sh  setup.sh
src/install/msg_srv_action_interface_example/include/msg_srv_action_interface_example/action/: arithmetic_checker.h  arithmetic_checker.hpp
src/install/msg_srv_action_interface_example/include/msg_srv_action_interface_example/msg/: arithmetic_argument.h  arithmetic_argument.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
src/install/msg_srv_action_interface_example/include/msg_srv_action_interface_example/srv/: arithmetic_operator.h  arithmetic_operator.hpp
src/install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/action/: ArithmeticChecker.action  ArithmeticChecker.idl
src/install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  msg_srv_action_interface_exampleConfig-version.cmake  msg_srv_action_interface_exampleConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
src/install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
src/install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/msg/: ArithmeticArgument.idl  ArithmeticArgument.msg
src/install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/srv/: ArithmeticOperator.idl  (+3 more)
src/install/mujoco_sim_test/lib/mujoco_sim_test/: mujoco_sim_node  publish_node
src/install/mujoco_sim_test/share/mujoco_sim_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/mujoco_test2/lib/mujoco_test2/: mujoco_node
src/install/mujoco_test2/share/mujoco_test2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/log/: latest_build  latest_list
src/msg_srv_action_interface_example/: CMakeLists.txt  package.xml
src/mujoco_sim_test/: CMakeLists.txt  package.xml
src/mujoco_sim_test/include/: mujoco2.hpp
src/mujoco_sim_test/src/: mujoco2.cpp  publisher.cpp
src/mujoco_test2/: CMakeLists.txt
src/mujoco_test2/include/: sim.hpp
src/mujoco_test2/model/: quadrupedMCL.xml
src/mujoco_test2/src/: main.cpp  sim.cpp
(+48 files in other folders)
